@@ -1,6 +1,6 @@
 #define xstr(s) str(s)
 #define str(s) #s
 
-#define VER_NUMBER 20090513-en
+#define VER_NUMBER 20090529-en
 #define ONS_VERSION xstr(VER_NUMBER)
 #define NSC_VERSION 292
