@@ -1,3 +1,9 @@
+2009-05-29
+
+  Added commands "strsph" and "textspeeddefault";
+  bugfix for Mac text output. [Mion]
+
+
 2009-04-27
 
   Support for opening non-ASCII Japanese filenames in Windows,
